--- a/Websites/sch.krzy.dev/ProjectHTMLv4/style.css
+++ b/Websites/sch.krzy.dev/ProjectHTMLv4/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkgray;
+    background-color: rgb(207, 207, 207);
     color: black;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
@@ -15,6 +15,6 @@ h1 {
     color: firebrick;
 }
 .achivements {
-    background-color: gray;
+    background-color: rgb(187, 187, 187);
     font-size: 13px;
 }
