--- a/Websites/sch.krzy.dev/style.css
+++ b/Websites/sch.krzy.dev/style.css
@@ -3,11 +3,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+@media only screen and (min-width: 800px) {
+    .container {
+        width: 60%;
+        margin: 0 auto;
+    }
+}
+
 .container {
     position: relative;
-    width: 60%;
     min-height: 400px;
-    margin: 0 auto;
     background-color: #545454;
 }
 
