--- a/Websites/sch.krzy.dev/style.css
+++ b/Websites/sch.krzy.dev/style.css
@@ -43,6 +43,7 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 /* The container <div> - needed to position the dropdown content */
